# text_data

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  noxfile.py  pyproject.toml  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: Makefile  api_structure.rst  conf.py  corpus.rst  exploration.rst  getting_started.rst  index.rst  installation.rst  make.bat  modules.rst  text_data.core.rst  text_data.indexing.rst  text_data.rst  usage.rst
examples/: Advanced Tutorial.ipynb  Displaying Bar Charts.ipynb  Displaying Searches with text_data.ipynb  Exploring Distinct Words.ipynb  Exploring Document Similarity.ipynb  utilities.py
proptest-regressions/: lib.txt
src/: lib.rs
tests/: __init__.py  test_core.py  test_corpus.py  test_query.py  test_statistics.py  test_tokenizers.py
text_data/: __init__.py  display.py  index.py  multi_corpus.py  query.py  tokenize.py
text_data/core/: __init__.py
text_data/indexing/: __init__.py
