[package]
name = "text_data_rs"
version = "0.1.0"
authors = ["Max Lee <maxbmhlee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "text_data_rs"
crate-type = ["cdylib"]

[dependencies]
genawaiter = "0.99.1"

[dependencies.pyo3]
version = "0.12.1"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]