[tool.poetry]
name = "text_data"
version = "0.1.0"
description = "A Python package for exploring text data for analysis"
authors = ["Max Lee <maxbmhlee@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/maxblee/text_data"
documentation = "https://maxblee.github.io/apis/text_data/"
keywords = ["text data", "data exploration"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Rust"
]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "*"
ipython = "*"
altair = {version = "^4.1.0", optional = true}

[tool.poetry.extras]
display = ["altair"]

[tool.poetry.dev-dependencies]
bump2version = "*"
wheel = "*"
watchdog = "*"
black = "==20.8b1"
nox = "*"
Sphinx = "*"
twine = "*"
pytest-cov = "*"
mypy = "*"
sphinx-autodoc-typehints = "*"
Faker = "*"
maturin = "*"
flake8 = "*"
pytest-flake8 = "*"
flake8-docstrings = "*"